--- a/skill.html
+++ b/skill.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Skill Andika</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sertifikat Andika</title>
   <style>
     * {
       margin: 0;
@@ -13,9 +13,15 @@
     }
 
     body {
-      background-color: black;
+      background-color: #000;
       color: white;
       min-height: 100vh;
+      animation: fadeIn 1s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     header {
@@ -41,105 +47,127 @@
       text-decoration: none;
       color: white;
       font-weight: 600;
-      transition: 0.3s;
+      transition: color 0.3s;
     }
 
     nav a:hover {
       color: red;
     }
 
-    .skills-section {
-      padding: 150px 50px 100px;
+    .sertifikat-section {
+      padding: 150px 20px 100px;
       text-align: center;
     }
 
-    .skills-title {
+    .sertifikat-section h2 {
       font-size: 32px;
-      font-weight: bold;
-      margin-bottom: 50px;
-    }
-
-    .skills-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-    }
-
-    .skill-card {
-      background-color: #1a1a1a;
-      border: 2px solid red;
-      border-radius: 20px;
-      padding: 20px;
-      width: 280px;
-      transition: transform 0.3s ease;
-    }
-
-    .skill-card:hover {
-      transform: translateY(-10px);
-    }
-
-    .skill-image {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      border: 5px solid red;
-      object-fit: contain;
-      background-color: #111;
-    }
-
-    .skill-title {
-      margin-top: 15px;
-      font-size: 20px;
-      font-weight: bold;
+      margin-bottom: 40px;
       color: white;
     }
 
-    .skill-list {
-      margin-top: 15px;
-      text-align: left;
-      padding-left: 20px;
-      font-size: 16px;
-      list-style-type: disc;
+    .sertifikat-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
     }
 
-    .skill-list li {
+    .sertifikat-box {
+      background: linear-gradient(135deg, #e52d27, #b31217);
+      padding: 20px 30px;
+      border-radius: 15px;
+      width: 80%;
+      max-width: 600px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      color: white;
+      transition: transform 0.3s ease, box-shadow 0.3s;
+      text-align: left;
+      text-decoration: none;
+      opacity: 0;
+      animation: fadeInUp 0.6s forwards;
+    }
+
+    .sertifikat-box:nth-child(even) {
+      animation-delay: 0.2s;
+    }
+
+    .sertifikat-box:nth-child(odd) {
+      animation-delay: 0.4s;
+    }
+
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+    }
+
+    .sertifikat-box:hover {
+      transform: scale(1.03);
+      box-shadow: 0 8px 25px rgba(255, 0, 0, 0.4);
+    }
+
+    .sertifikat-box h3 {
       margin-bottom: 10px;
+      font-size: 20px;
+      font-weight: bold;
+    }
+
+    .sertifikat-box p {
+      font-size: 15px;
+      opacity: 0.9;
+    }
+
+    footer {
+      background-color: #111;
+      color: white;
+      padding: 20px 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      z-index: 5;
+      gap: 25px;
+      font-size: 16px;
+      border-top: 2px solid red;
+    }
+
+    footer a {
+      color: white;
+      text-decoration: none;
+      transition: color 0.3s;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    footer a:hover {
+      color: red;
     }
 
     @media (max-width: 768px) {
-      .skills-container {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-          footer {
-        background-color: #111;
-        color: white;
-        padding: 20px 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        z-index: 5;
-        gap: 25px;
-        font-size: 16px;
-        border-top: 2px solid red;
-      }
-      footer a {
-        color: white;
-        text-decoration: none;
-        transition: 0.3s;
-        display: flex;
-        align-items: center;
-        gap: 8px;
+      .sertifikat-box {
+        width: 90%;
       }
 
-      footer a:hover {
-        color: red;
+      nav a {
+        margin-left: 15px;
+        font-size: 14px;
       }
+
+      footer {
+        flex-wrap: wrap;
+        padding: 15px;
+        gap: 15px;
+        font-size: 14px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -154,58 +182,31 @@
     </nav>
   </header>
 
-  <section class="skills-section">
-    <h2 class="skills-title">Skills</h2>
-    <div class="skills-container">
-      <!-- Skill 1 -->
-      <div class="skill-card">
-        <img src="image/debian.png" alt="Andika Linux" class="skill-image">
-        <h3 class="skill-title">Linux Debian</h3>
-        <ul class="skill-list">
-          <li>Mengelola server Debian</li>
-          <li>Konfigurasi web server, DNS, dan firewall</li>
-          <li>Remote user & manajemen user</li>
-          <li>Konfigurasi jaringan dasar</li>
-        </ul>
-      </div>
-
-      <!-- Skill 2 -->
-      <div class="skill-card">
-        <img src="image/Screenshot_6.png" alt="Andika Mikrotik" class="skill-image">
-        <h3 class="skill-title">Mikrotik</h3>
-        <ul class="skill-list">
-          <li>Konfigurasi routing dan bridge</li>
-          <li>Pengaturan firewall & NAT</li>
-          <li>Manajemen wireless</li>
-          <li>Troubleshooting jaringan Mikrotik</li>
-        </ul>
-      </div>
-
-      <!-- Skill 3 -->
-      <div class="skill-card">
-        <img src="image/web.png" alt="Andika Web" class="skill-image">
-        <h3 class="skill-title">Web Development</h3>
-        <ul class="skill-list">
-          <li>HTML & CSS</li>
-          <li>Layout yang rapi</li>
-          <li>Dasar JavaScript untuk interaksi</li>
-        </ul>
-      </div>
+  <section class="sertifikat-section">
+    <h2>Certificates</h2>
+    <div class="sertifikat-container">
+      <!-- Sertifikat - isi sesuai yang kamu punya -->
+      <a href="https://drive.google.com/file/d/1tGsmNs0Tvv7yVpPHviXDTcFy0fo8AksV/view" target="_blank" class="sertifikat-box">
+        <h3>Generative AI for Student Training by Microsoft</h3>
+        <p>Training in generative AI principles and applications for students.</p>
+      </a>
+      <!-- Tambahkan sertifikat lain dengan format serupa -->
     </div>
   </section>
+
   <footer>
-  <a href="https://wa.me/6282257006740" target="_blank">
-    <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
-  </a>
-  <a href="mailto:andika23580@gmail.com" target="_blank">
-    <img src="image/Email.png" alt="Email" width="20"> Email
-  </a>
-  <a href="www.linkedin.com/in/andika-58905a28a" target="_blank">
-    <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
-  </a>
-  <a href="https://www.instagram.com/_kaa_aja?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-    <img src="image/ig.png" alt="Instagram" width="20"> Instagram
-  </a>
-</footer>
+    <a href="https://wa.me/6282257006740" target="_blank">
+      <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
+    </a>
+    <a href="mailto:andika23580@gmail.com" target="_blank">
+      <img src="image/Email.png" alt="Email" width="20"> Email
+    </a>
+    <a href="https://www.linkedin.com/in/andika-58905a28a" target="_blank">
+      <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
+    </a>
+    <a href="https://www.instagram.com/_kaa_aja" target="_blank">
+      <img src="image/ig.png" alt="Instagram" width="20"> Instagram
+    </a>
+  </footer>
 </body>
 </html>
