--- a/skill.html
+++ b/skill.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sertifikat Andika</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Skill Andika</title>
   <style>
     * {
       margin: 0;
@@ -13,15 +13,10 @@
     }
 
     body {
-      background-color: #000;
+      background-color: black;
       color: white;
       min-height: 100vh;
-      animation: fadeIn 1s ease;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      overflow-x: hidden;
     }
 
     header {
@@ -47,79 +42,75 @@
       text-decoration: none;
       color: white;
       font-weight: 600;
-      transition: color 0.3s;
+      transition: color 0.3s ease;
     }
 
     nav a:hover {
       color: red;
     }
 
-    .sertifikat-section {
-      padding: 150px 20px 100px;
+    .skills-section {
+      padding: 150px 50px 100px;
       text-align: center;
     }
 
-    .sertifikat-section h2 {
+    .skills-title {
       font-size: 32px;
-      margin-bottom: 40px;
-      color: white;
+      font-weight: bold;
+      margin-bottom: 50px;
+      animation: fadeInDown 1s ease;
     }
 
-    .sertifikat-container {
+    .skills-container {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      animation: fadeInUp 1.5s ease;
     }
 
-    .sertifikat-box {
-      background: linear-gradient(135deg, #e52d27, #b31217);
-      padding: 20px 30px;
-      border-radius: 15px;
-      width: 80%;
-      max-width: 600px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-      color: white;
-      transition: transform 0.3s ease, box-shadow 0.3s;
-      text-align: left;
-      text-decoration: none;
-      opacity: 0;
-      animation: fadeInUp 0.6s forwards;
+    .skill-card {
+      background-color: #1a1a1a;
+      border: 2px solid red;
+      border-radius: 20px;
+      padding: 20px;
+      width: 280px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: zoomIn 1s ease;
     }
 
-    .sertifikat-box:nth-child(even) {
-      animation-delay: 0.2s;
+    .skill-card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 8px 20px rgba(255, 0, 0, 0.4);
     }
 
-    .sertifikat-box:nth-child(odd) {
-      animation-delay: 0.4s;
+    .skill-image {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      border: 5px solid red;
+      object-fit: contain;
+      background-color: #111;
+      animation: pulse 2s infinite;
     }
 
-    @keyframes fadeInUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-    }
-
-    .sertifikat-box:hover {
-      transform: scale(1.03);
-      box-shadow: 0 8px 25px rgba(255, 0, 0, 0.4);
-    }
-
-    .sertifikat-box h3 {
-      margin-bottom: 10px;
+    .skill-title {
+      margin-top: 15px;
       font-size: 20px;
       font-weight: bold;
+      color: white;
     }
 
-    .sertifikat-box p {
-      font-size: 15px;
-      opacity: 0.9;
+    .skill-list {
+      margin-top: 15px;
+      text-align: left;
+      padding-left: 20px;
+      font-size: 16px;
+      list-style-type: disc;
+    }
+
+    .skill-list li {
+      margin-bottom: 10px;
     }
 
     footer {
@@ -141,7 +132,7 @@
     footer a {
       color: white;
       text-decoration: none;
-      transition: color 0.3s;
+      transition: 0.3s;
       display: flex;
       align-items: center;
       gap: 8px;
@@ -152,20 +143,57 @@
     }
 
     @media (max-width: 768px) {
-      .sertifikat-box {
-        width: 90%;
+      .skills-container {
+        flex-direction: column;
+        align-items: center;
       }
 
       nav a {
         margin-left: 15px;
         font-size: 14px;
       }
+    }
 
-      footer {
-        flex-wrap: wrap;
-        padding: 15px;
-        gap: 15px;
-        font-size: 14px;
+    /* Animations */
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes zoomIn {
+      from {
+        opacity: 0;
+        transform: scale(0.9);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+    @keyframes pulse {
+      0%, 100% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.05);
       }
     }
   </style>
@@ -182,15 +210,40 @@
     </nav>
   </header>
 
-  <section class="sertifikat-section">
-    <h2>Certificates</h2>
-    <div class="sertifikat-container">
-      <!-- Sertifikat - isi sesuai yang kamu punya -->
-      <a href="https://drive.google.com/file/d/1tGsmNs0Tvv7yVpPHviXDTcFy0fo8AksV/view" target="_blank" class="sertifikat-box">
-        <h3>Generative AI for Student Training by Microsoft</h3>
-        <p>Training in generative AI principles and applications for students.</p>
-      </a>
-      <!-- Tambahkan sertifikat lain dengan format serupa -->
+  <section class="skills-section">
+    <h2 class="skills-title">Skills</h2>
+    <div class="skills-container">
+      <div class="skill-card">
+        <img src="image/debian.png" alt="Andika Linux" class="skill-image">
+        <h3 class="skill-title">Linux Debian</h3>
+        <ul class="skill-list">
+          <li>Mengelola server Debian</li>
+          <li>Konfigurasi web server, DNS, dan firewall</li>
+          <li>Remote user & manajemen user</li>
+          <li>Konfigurasi jaringan dasar</li>
+        </ul>
+      </div>
+
+      <div class="skill-card">
+        <img src="image/Screenshot_6.png" alt="Andika Mikrotik" class="skill-image">
+        <h3 class="skill-title">Mikrotik</h3>
+        <ul class="skill-list">
+          <li>Konfigurasi routing dan bridge</li>
+          <li>Pengaturan firewall & NAT</li>
+          <li>Manajemen wireless</li>
+          <li>Troubleshooting jaringan Mikrotik</li>
+        </ul>
+      </div>
+
+      <div class="skill-card">
+        <img src="image/web.png" alt="Andika Web" class="skill-image">
+        <h3 class="skill-title">Web Development</h3>
+        <ul class="skill-list">
+          <li>HTML & CSS</li>
+          <li>Layout yang rapi</li>
+          <li>Dasar JavaScript untuk interaksi</li>
+        </ul>
+      </div>
     </div>
   </section>
 
